--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,36 @@
 <h1>List of users</h1>
 
 <table border="1">
+  <th>
+    Username
+  </th>
 
+  <th>
+    Private?
+  </th>
+
+  <th>
+  </th>
+
+  <% @list_of_users.each do |user|%>
+  <tr>
+    <td>
+      <%= user.username%>
+    </td>
+
+    <td>
+      <% if user.private == true %>
+        <%= "Yes" %>
+      <% else %>
+        <%= "No" %>
+      <% end %>
+    </td>
+
+    <td>
+      <a href="users/<%=user.username%>">
+        Show details
+      </a>
+    </td>
+    <% end %>
+  </tr>
 </table>
