--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
           </a>
         </li>
 
+        <% if @current_user.nil? == true %>
           <li>
             <a href="/user_sign_in">
               Sign in
@@ -40,6 +41,20 @@
               Sign up
             </a>
           </li>
+
+        <% else %>
+          <li>
+            <a href="/edit_user_profile">
+              <%= @current_user.username %>
+            </a>
+          </li>
+
+          <li>
+            <a href="/user_sign_out">
+              Sign out
+            </a>
+          </li>
+        <% end %>
       </ul>
     </nav>
     <% notice %>
