--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,6 +26,12 @@
       <% end %>
     </td>
 
+    <% if @current_user.nil? == false %>
+      <td>
+        <button> Follow </button>
+      </td>
+    <% end %>
+
     <td>
       <a href="users/<%=user.username%>">
         Show details
