--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -115,3 +115,14 @@
       </td>
     </tr>
   <% end %>
+</table>
+
+<h3> Add a new comment </h3>
+<form action="/insert_comment" method="post">
+  <input type="hidden" value="<%= @current_user.id %>" name="query_author_id" id="query_author_id">
+  <input type="hidden" value="<%= @the_photo.id %>" name="query_photo_id" id="query_photo_id">
+  <label for="browser_comment">Comment</label>
+  <textarea id="browser_comment" name="query_body" placeholder="Enter a comment..."></textarea>
+
+  <button>Add comment</button>
+</form>
