--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,8 +57,8 @@
         <% end %>
       </ul>
     </nav>
-    <% notice %>
-    <% alert %>
+    <%= notice %>
+    <%= alert %>
     <%= yield %>
   </body>
 </html>
