--- a/app/views/users/show_owned_photo.html.erb
+++ b/app/views/users/show_owned_photo.html.erb
@@ -55,7 +55,7 @@
     Edit user  
   </dt>
   <dd>
-    <form action="/modify_user/<%= @the_user.username %>" method="post">
+    <form action="/modify_user" method="post">
       <label for="browser_username">Username</label>
       <input id="browser_username" type="text" name="query_username" placeholder="Enter a username..."
         value=<%= @the_user.username %>>
