--- a/app/views/users/show_discovery.html.erb
+++ b/app/views/users/show_discovery.html.erb
@@ -6,7 +6,6 @@
     <%= @the_user.private%>
   </dd>
 
-
   <dt>Followers</dt>
   <dd>
     <%= @follow_request_received_accepted.count %>
@@ -32,7 +31,7 @@
   </ul>
 </nav>
 
-<h2>Liked photos (<%= @liked_photos.count %>)</h2>
+<h2>Feed (<%= @liked_photos.count %>)</h2>
 
 <table border="1">
   <tr>
