--- a/app/views/users/show_owned_photo.html.erb
+++ b/app/views/users/show_owned_photo.html.erb
@@ -3,11 +3,7 @@
 <dl>
   <dt>Private</dt>
   <dd>
-    <% if @the_user.private == true%>
-      <%= "Yes" %>
-    <% else %>
-      <%= "No" %>
-    <% end %>
+    <%= @the_user.private%>
   </dd>
 
   <dt>Followers</dt>
