fixed feed and discovery mix up

--- a/app/views/users/show_discover.html.erb
+++ b/app/views/users/show_discover.html.erb
@@ -31,7 +31,7 @@
   </ul>
 </nav>
 
-<h2>Feed (<%= @liked_photos.count %>)</h2>
+<h2>Discover (<%= @liked_photos.count %>)</h2>
 
 <table border="1">
   <tr>
