--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -6,24 +6,20 @@
   </div>
 </div>
 
-<hr>
-
+<% if @current_user.nil? == false %>
 <div>
-  <div>
-    <h2>
-      Add a new photo
-    </h2>
-    <form action="/insert_photo" method="post" enctype="multipart/form-data">
-      <label for="browser_input">Image</label>
-      <input id="browser_input" type="file" name="query_image" placeholder="Enter a URL for the image...">
-
-      <label for="browser_caption">Caption</label>
-      <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."></textarea>
-
-      <button>Add photo</button>
-    </form>
-
+  <h2>
+    Add a new photo
+  </h2>
+  <form action="/insert_photo" method="post" enctype="multipart/form-data">
+    <label for="browser_input">Image</label>
+    <input id="browser_input" type="file" name="query_image" placeholder="Enter a URL for the image...">
+    <label for="browser_caption">Caption</label>
+    <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."></textarea>
+    <button>Add photo</button>
+  </form>
 <hr>
+<% end %>
 
 <div>
   <div>
