add delete and upload feature to photo detail page if owner_id=current user

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -16,7 +16,7 @@
     <input id="browser_input" type="file" name="query_image" placeholder="Enter a URL for the image...">
     <label for="browser_caption">Caption</label>
     <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."></textarea>
-    <input id="query_owner_id" name="query_owner_id" value="<%= @current_user.id %>">
+    <input type="hidden" id="query_owner_id" name="query_owner_id" value="<%= @current_user.id %>">
     <button>Add photo</button>
   </form>
 <hr>
