--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,20 +4,6 @@
       Photo Details
     </h1>
 
-    <div>
-      <div>
-        <a href="/photos">
-          Go back
-        </a>
-      </div>
-
-      <div>
-        <a href="/delete_photo/<%= @the_photo.id %>">
-          Delete photo
-        </a>
-      </div>
-    </div>
-
     <dl>
       <dt>
         Image
@@ -70,7 +56,6 @@
         <% end %>
       </dd>
 
-       
       <dt>
         Add a fan
       </dt>
@@ -88,6 +73,30 @@
             Unlike
           </a>
         </dd>
+      <% end %>
+
+      <% if @current_user.id == @the_photo.owner_id %>
+      <dt>
+        Edit photo
+      </dt>
+      <dd>
+        <form action="/insert_photo" method="post" enctype="multipart/form-data">
+          <label for="browser_input">Image</label>
+          <input id="browser_input" type="file" name="query_image" placeholder="Enter a URL for the image...">
+          <label for="browser_caption">Caption</label>
+          <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."></textarea>
+          <input type="hidden" id="query_owner_id" name="query_owner_id" value="<%= @current_user.id %>">
+          <button>Add photo</button>
+        </form>
+      </dd>
+      <dt>
+        Delete photo
+      </dt>
+      <dd>
+        <a href="/delete_photo/<%= @the_photo.id %>">
+          Delete this photo
+        </a>
+      </dd>
       <% end %>
     </dl>
   </div>
