--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -86,7 +86,7 @@
           <label for="browser_caption">Caption</label>
           <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."></textarea>
           <input type="hidden" id="query_owner_id" name="query_owner_id" value="<%= @current_user.id %>">
-          <button>Add photo</button>
+          <button>Update photo</button>
         </form>
       </dd>
       <dt>
